# Chameleon

./: Cargo.toml  README.md  TODO.md  all.chm  grammar.chm  grammar_spec  test.chm  toolchain.toml
evaluation/: .gitignore  README.md  generator.c  main.c  size-eval.rs
fuzz/: Cargo.toml  fuzz.sh  grammar.py  lexer.dict
fuzz-afl++/: .gitignore  Cargo.toml  README  fuzz.sh  grammar.py  nautilus.ron
fuzz-afl++/src/: main.rs
fuzz/fuzz_targets/: lexer.rs
grammars/: bench.chm  json.chm  ref.chm  spec.chm
src/: grammar.rs  lib.rs  main.rs
src/backend/: C.rs  formatter.rs  mod.rs
src/backend/C/: README.md  mod.rs
src/frontend/: bitpattern.rs  grammar.rs  graph.rs  keywords.rs  lexer.rs  mod.rs  parser.rs  range.rs  source_view.rs  stats.rs
tests/C/compile-tests/: range-limits.chm  run.sh
tests/json/: Makefile  fuzz.sh  json.c  json.c.h  main.c
