[package]
name = "chameleon"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-unis = 1
debug = true
panic = "abort"

[dependencies]
unicode-segmentation = "1.9"
termcolor = "1.1"
num-traits = "0.2"
ahash = "0.7"
petgraph = "0.6.2"
clap = { version = "3.2.16", features = ["derive", "suggestions", "unicode", "wrap_help"] }
